--- a/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
+++ b/scripts/gp_post_approx_paper/test_1d_visualization.Rmd
@@ -65,6 +65,8 @@ source(file.path(src_dir, "seq_design_gp.r"))
 source(file.path(src_dir, "seq_design_for_post_approx.r"))
 source(file.path(src_dir, "gp_mcmc_functions.r"))
 
+save_output <- FALSE
+
 # Plot settings applied to all plots. 
 design_pt_size <- 4
 line_thickness <- 1.5
@@ -75,9 +77,6 @@ ylim <- c(0.0777, 0.4)
 # Random number generator seeds. 
 seed_inv_prob <- 2562
 seed_init_design <- 16431
-
-# The number of independent observations of the observable (a time average). 
-N_obs <- 1L
 
 # Settings for approximate simulation from sample-based approximate posterior. 
 # Increasing these values increases the fidelity of the approximation. 
@@ -106,6 +105,8 @@ N_std_dev <- 1.64
 inv_prob <- get_vsem_test_1d_vis()
 par_prior <- inv_prob$par_prior
 llik_obj_exact <- inv_prob$llik_obj
+default_conditional <- llik_obj_exact$default_conditional
+default_normalize <- llik_obj_exact$default_normalize
 ```
 
 ## Prior Distribution
@@ -157,7 +158,11 @@ plot(plt_outputs)
 set.seed(seed_init_design)
 
 # Generate design and test points.
-design_info <- get_init_design_list(inv_prob, design_method, N_design)
+design_inputs <- matrix(c(1.57, 3.0, 4.479, 7.45), ncol=1, 
+                        dimnames=list(NULL, inv_prob$par_names))
+N_design <- nrow(design_inputs)
+design_info <- get_init_design_list(inv_prob, design_method, N_design=N_design,
+                                    inputs=design_inputs)
 
 # Grid of test points for plotting and emulator evaluation. The final set of test 
 # points will be the union of the test grid with the design points (ensuring the 
@@ -187,25 +192,42 @@ plot(test_info$input, exp(test_info$llik), type="l",
 # Initial design and fit emulators. 
 #
 
+# Log-likelihood emulator: two-stage approach. Fit quadratic regression, then 
+# fit GP to residuals.
+quad_formula <- as.formula(paste0("y ~ ", paste0("poly(", inv_prob$par_names, ", degree=2)", 
+                                                 collapse=" + ")))
+lm_quad <- lm(quad_formula, data=data.frame(y=design_info$llik, design_info$input))
+lm_pred <- predict(lm_quad, data.frame(test_info$input))
+lm_pred_df <- data.frame(y=lm_pred, test_info$input)
+# jitter <- sqrt(.Machine$double.eps)
+# resid <- lm_quad$residuals + rnorm(design_info$N_design, mean=0, sd=jitter)
+# em_llik_gp <- gpWrapperHet(design_info$input, matrix(resid, ncol=1), 
+#                            normalize_output=FALSE, scale_input=TRUE)
+# em_llik_gp$fit("Gaussian", "constant", estimate_nugget=FALSE)
+# lm_pred <- predict(lm_quad, data.frame(test_info$input))
+# resid_pred <- em_llik_gp$predict(test_info$input)
+# em_pred_llik <- list(mean=lm_pred+resid_pred$mean, var=resid_pred$var)
+
 # Log-likelihood emulator. 
 em_llik_gp <- gpWrapperKerGP(design_info$input, matrix(design_info$llik, ncol=1), 
                              normalize_output=TRUE, scale_input=TRUE)
 em_llik_gp$fit("Gaussian_plus_Quadratic", "constant", estimate_nugget=FALSE,
                optimFun="nloptr::nloptr", trace=TRUE, multistart=10)
 
-em_llik <- llikEmulatorGP("em_llik", em_llik_gp, default_conditional=default_conditional, 
-                          default_normalize=default_normalize, lik_par=inv_prob$sig2_true, 
-                          use_fixed_lik_par=TRUE)
-emulator_pred_llik <- em_llik$predict_emulator(test_info$input, return_cov=TRUE)
+em_llik <- llikEmulatorGP("em_llik", em_llik_gp, lik_par=inv_prob$sig2_model, 
+                          use_fixed_lik_par=TRUE, default_conditional=default_conditional,
+                          default_normalize=default_normalize)
+em_pred_llik <- em_llik$predict_emulator(test_info$input, return_cov=TRUE)
 
 # Forward model emulator.
-em_fwd_gp <- gpWrapperHet(design_info$input, matrix(design_info$fwd, ncol=1), normalize_output=TRUE, scale_input=TRUE)
+em_fwd_gp <- gpWrapperHet(design_info$input, design_info$fwd, 
+                          normalize_output=TRUE, scale_input=TRUE)
 em_fwd_gp$fit("Gaussian", "constant", estimate_nugget=FALSE)
-em_fwd <- llikEmulatorFwdGaussDiag("em_fwd", em_fwd_gp, matrix(y,nrow=N_obs), sig2=inv_prob$sig2_true, 
-                                   default_conditional=default_conditional, 
-                                   default_normalize=default_normalize, use_fixed_lik_par=TRUE, 
-                                   par_names=rownames(par_prior_params))
-emulator_pred_fwd <- em_fwd$predict_emulator(test_info$input, return_cov=TRUE)
+em_fwd <- llikEmulatorGPFwdGaussDiag("em_fwd", em_fwd_gp, inv_prob$y, sig2=inv_prob$sig2_model, 
+                                     default_conditional=default_conditional, 
+                                     default_normalize=default_normalize, use_fixed_lik_par=TRUE, 
+                                     par_names=inv_prob$par_names)
+em_pred_fwd <- em_fwd$predict_emulator(test_info$input, return_cov=TRUE)
 ```
 
 
@@ -216,51 +238,109 @@ emulator_pred_fwd <- em_fwd$predict_emulator(test_info$input, return_cov=TRUE)
 
 # (1): Plot the underlying GP emulator predictive distributions.  
 plt_gp_dist_llik <- em_llik$emulator_model$plot_pred_1d(test_info$input, include_interval=TRUE,
-                                                        interval_method=interval_method, N_std_dev=N_std_dev,
-                                                        pred_list=emulator_pred_llik, ylab="L(u)",
-                                                        Y_new=matrix(test_info$llik, ncol=1), line_thickness=line_thickness,
-                                                        design_color=design_color, design_pt_size=design_pt_size, 
+                                                        interval_method=interval_method, 
+                                                        N_std_dev=N_std_dev,
+                                                        pred_list=em_pred_llik, ylab="L(u)",
+                                                        Y_new=matrix(test_info$llik, ncol=1),
+                                                        line_thickness=line_thickness,
+                                                        design_color=design_color, 
+                                                        design_pt_size=design_pt_size, 
                                                         xlab="u", plot_title="GP predictions [llik]")[[1]]
 plt_gp_dist_fwd <- em_fwd$emulator_model$plot_pred_1d(test_info$input, include_interval=TRUE,
-                                                      interval_method=interval_method, N_std_dev=N_std_dev,
-                                                      pred_list=emulator_pred_fwd, ylab="G(u)",
-                                                      Y_new=matrix(test_info$fwd, ncol=1), line_thickness=line_thickness,
-                                                      design_color=design_color, design_pt_size=design_pt_size, 
+                                                      interval_method=interval_method, 
+                                                      N_std_dev=N_std_dev,
+                                                      pred_list=em_pred_fwd, ylab="G(u)",
+                                                      Y_new=matrix(test_info$fwd, ncol=1),
+                                                      line_thickness=line_thickness,
+                                                      design_color=design_color, 
+                                                      design_pt_size=design_pt_size, 
                                                       xlab="u", plot_title="GP predictions [fwd]")[[1]]
 
+
+plt_gp_dist_llik <- plt_gp_dist_llik + geom_line(aes(Cv,y), data=lm_pred_df, color="green")
+
+plot(plt_gp_dist_llik)
+plot(plt_gp_dist_fwd)
+
+```
+
+```{r}
 # (2): Plot the log-likelihood emulator predictive distributions. 
-plt_llik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_llik,
+plt_llik_dist_llik <- em_llik$plot_pred_1d(test_info$input, em_pred_list=em_pred_llik,
                                            plot_type="llik", include_interval=TRUE,
                                            interval_method=interval_method, N_std_dev=N_std_dev,
-                                           true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
-                                           design_color=design_color, design_pt_size=design_pt_size,
-                                           xlab="u", plot_title="log-likelihood predictions [llik]", ylab="L(u)")
-plt_llik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_fwd,
+                                           true_llik=test_info$llik, CI_prob=CI_prob,
+                                           line_thickness=line_thickness,
+                                           design_color=design_color, 
+                                           design_pt_size=design_pt_size,
+                                           xlab="u", ylab="L(u)",
+                                           plot_title="log-likelihood predictions [llik]")
+
+plt_llik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, em_pred_list=em_pred_fwd,
                                          plot_type="llik", include_interval=TRUE,  
                                          interval_method=interval_method, N_std_dev=N_std_dev,
                                          true_llik=test_info$llik, CI_prob=CI_prob, ylab="L(u)",
                                          design_color=design_color, design_pt_size=design_pt_size,
                                          xlab="u", plot_title="log-likelihood predictions [fwd]")
+```
+
+```{r}
+# - Change GP prior for llik emulator to avoid getting a mean function that is increasing 
+# at the right boundary.
+# - Try re-plotting and simply cut off the y-axis at a certain level.
+#
+#
+
 
 # (3): Plot the likelihood emulator predictive distributions. 
-plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_llik,
-                                          plot_type="lik", include_interval=TRUE, 
+plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, em_pred_list=em_pred_llik,
+                                          plot_type="lik", include_interval=FALSE, 
+                                          true_llik=test_info$llik, CI_prob=CI_prob,
+                                          line_thickness=line_thickness, log_scale=TRUE,
+                                          design_color=design_color, design_pt_size=design_pt_size, 
+                                          plot_title="likelihood predictions [llik]")
+
+
+
+plt_lik_dist_llik <- em_llik$plot_pred_1d(test_info$input, em_pred_list=em_pred_llik,
+                                          plot_type="lik", log_scale=TRUE,
+                                          include_interval=TRUE, 
                                           interval_method=interval_method, N_std_dev=N_std_dev,
-                                          true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
-                                          design_color=design_color, design_pt_size=design_pt_size, ylab="exp L(u)",
-                                          xlab="u", plot_title="likelihood predictions [llik]")
+                                          true_llik=test_info$llik, CI_prob=CI_prob,
+                                          line_thickness=line_thickness,
+                                          design_color=design_color, design_pt_size=design_pt_size, 
+                                          ylab="exp L(u)", xlab="u", 
+                                          plot_title="likelihood predictions [llik]")
 
 # TODO: why doesnt this throw an error when using "CI"?
-plt_lik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, emulator_pred_list=emulator_pred_fwd, 
-                                        plot_type="lik", include_interval=TRUE, 
-                                        interval_method=interval_method, N_std_dev=N_std_dev,
-                                        true_llik=test_info$llik, CI_prob=CI_prob, line_thickness=line_thickness,
-                                        design_color=design_color, design_pt_size=design_pt_size, ylab="exp L(u)",
+plt_lik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, em_pred_list=em_pred_fwd, 
+                                        plot_type="lik", log_scale=TRUE, include_interval=FALSE, 
+                                        true_llik=test_info$llik,
+                                        line_thickness=line_thickness,
+                                        design_color=design_color, 
                                         xlab="u", plot_title="likelihood predictions [fwd]")
 
+
+plt_lik_dist_fwd <- em_fwd$plot_pred_1d(test_info$input, em_pred_list=em_pred_fwd, 
+                                        plot_type="lik", include_interval=TRUE, 
+                                        log_scale=FALSE, interval_method=interval_method,
+                                        N_std_dev=N_std_dev,
+                                        true_llik=test_info$llik, CI_prob=CI_prob, 
+                                        line_thickness=line_thickness,
+                                        design_color=design_color, 
+                                        design_pt_size=design_pt_size, ylab="exp L(u)",
+                                        xlab="u", plot_title="likelihood predictions [fwd]")
+
+plot(plt_lik_dist_llik)
+plot(plt_lik_dist_fwd)
+
+```
+
+
+```{r}
 #
 # Plot formatting and saving. 
-# 
+#
 
 # Align axes: log-likelihood. 
 lims_llik <- get_common_lims(plt_gp_dist_llik, plt_llik_dist_llik, plt_llik_dist_fwd)
@@ -273,25 +353,33 @@ plt_gp_dist_llik <- ggformat_journal(plt_gp_dist_llik, xlim=lims_llik$xlim, ylim
 plt_gp_dist_fwd <- ggformat_journal(plt_gp_dist_fwd, xlim=lims_llik$xlim)
 plot(plt_gp_dist_llik)
 plot(plt_gp_dist_fwd)
-ggsave(file.path(output_dir, "gp_dist_llikem.png"), plt_gp_dist_llik)
-ggsave(file.path(output_dir, "gp_dist_fwdem.png"), plt_gp_dist_fwd)
+if(save_output) {
+  ggsave(file.path(output_dir, "gp_dist_llikem.png"), plt_gp_dist_llik)
+  ggsave(file.path(output_dir, "gp_dist_fwdem.png"), plt_gp_dist_fwd)
+}
 
 # Log-likelihood plots. 
 plt_llik_dist_llik <- ggformat_journal(plt_llik_dist_llik, xlim=lims_llik$xlim, ylim=lims_llik$ylim)
 plt_llik_dist_fwd <- ggformat_journal(plt_llik_dist_fwd, xlim=lims_llik$xlim, ylim=lims_llik$ylim)
 plot(plt_llik_dist_llik)
 plot(plt_llik_dist_fwd)
-ggsave(file.path(output_dir, "llik_dist_llikem.png"), plt_llik_dist_llik)
-ggsave(file.path(output_dir, "llik_dist_fwdem.png"), plt_llik_dist_fwd)
+if(save_output) {
+  ggsave(file.path(output_dir, "llik_dist_llikem.png"), plt_llik_dist_llik)
+  ggsave(file.path(output_dir, "llik_dist_fwdem.png"), plt_llik_dist_fwd)
+}
 
 # Likelihood plots. 
 plt_lik_dist_llik <- ggformat_journal(plt_lik_dist_llik, xlim=lims_lik$xlim, ylim=lims_lik$ylim)
 plt_lik_dist_fwd <- ggformat_journal(plt_lik_dist_fwd, xlim=lims_lik$xlim, ylim=lims_lik$ylim)
 plot(plt_lik_dist_llik)
 plot(plt_lik_dist_fwd)
-ggsave(file.path(output_dir, "lik_dist_llikem.png"), plt_lik_dist_llik)
-ggsave(file.path(output_dir, "lik_dist_fwdem.png"), plt_lik_dist_fwd)
+if(save_output) {
+  ggsave(file.path(output_dir, "lik_dist_llikem.png"), plt_lik_dist_llik)
+  ggsave(file.path(output_dir, "lik_dist_fwdem.png"), plt_lik_dist_fwd)
+}
 ```
+
+
 ```{r}
 #
 # Compute (approximately) normalized exact posterior. 
