--- a/scripts/tutorials/basis_function_emulation.Rmd
+++ b/scripts/tutorials/basis_function_emulation.Rmd
@@ -187,13 +187,10 @@ design_info <- list(input=U, W=project_orthog_scalar(G, B, m))
 # Fit GPs. Note that the empirical mean of each weight vector `w_j(U)` is 
 # already 0, but we still set `normalize_output=TRUE` to scale these to have 
 # standard deviation 1. 
-gp_w <- gpWrapperKerGP(design_info$input, design_info$W, scale_input=TRUE,
-                       normalize_output=TRUE)
-gp_w$set_gp_prior("Gaussian", "quadratic")
-
-
-gp_w$fit("Gaussian", "quadratic", estimate_nugget=FALSE)
-
+gp_w <- gpWrapperHet(design_info$input, design_info$W, scale_input=TRUE,
+                     normalize_output=TRUE)
+gp_w$set_gp_prior("Gaussian", "constant", include_noise=FALSE)
+gp_w$fit()
 gp_w$summarize()
 ```
 
@@ -211,7 +208,7 @@ gp_w$plot_pred(test_info$input, test_info$W, include_CI=TRUE)
 ```
 
 ```{r}
-gp_w$plot_1d_projection(include_design=TRUE)
+gp_w$plot_1d_projection(include_design=FALSE)
 ```
 
 
